# github-workflows

./: .cgcignore  .env.example  .gitignore  .markdown-link-check.json  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  DOCUMENTATION_AUDIT.md  IMPLEMENTATION_SUMMARY.md  PIPELINE_PAGE_OVERVIEW.txt  README  README.md  VISUAL_MOCKUP.md  WEATHER_WIDGET.md  docker-compose.yml  index.html  styles.css  tasks.md  tests.html  theme.js
.copilot/: mcp.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/src/: attachment_formatter.py  config.py  constants.py  dependencies.py  exceptions.py  logging_utils.py  main.py  rate_limit.py  utils.py
backend/src/api/: __init__.py  agents.py  auth.py  board.py  chat.py  chores.py  cleanup.py  errors.py  health.py  housekeeping.py  mcp.py  metadata.py  pipelines.py  profile.py  project_board.py  projects.py  settings.py  signal.py  tasks.py  tools.py  video.py  weather.py  webhooks.py  workflow.py
backend/src/api/chat/: __init__.py  _state.py  commands.py  messaging.py  proposals.py  uploads.py
backend/src/middleware/: csp.py  rate_limit.py
backend/src/migrations/: 001_initial_schema.sql  002_add_workflow_config_column.sql  003_add_admin_column.sql  004_add_signal_tables.sql  005_signal_phone_hash_unique.sql  006_add_mcp_configurations.sql  007_agent_configs.sql  007_housekeeping.sql  008_cleanup_audit_logs.sql  009_housekeeping.sql  010_chores.sql  011_chat_persistence.sql  011_metadata_cache.sql  012_chat_persistence.sql  013_agent_config_lifecycle_status.sql  013_pipeline_configs.sql  014_agent_default_models.sql  014_extend_mcp_tools.sql  015_agent_icon_name.sql  015_pipeline_mcp_presets.sql  016_chores_enhancements.sql  017_blocking_queue.sql  018_pipeline_blocking_override.sql  019_agent_model_setting.sql  019_user_profiles.sql  020_chore_presets.sql  021_encrypt_existing.sql  021_pipeline_state.sql  021_remove_blocking.sql  022_chat_file_urls.sql  022_encrypt_existing_tokens.sql  023_chat_proposal_pipeline.sql  023_consolidated_schema.sql
backend/src/models/: __init__.py  agent.py  agent_creator.py  agents.py  blocking.py  board.py  chat.py  chores.py  cleanup.py  common.py  housekeeping.py  mcp.py  pipeline.py  project.py  project_board.py  rate_limit.py  recommendation.py  settings.py  signal.py  task.py  tools.py  user.py  video.py  workflow.py
backend/src/prompts/: issue_generation.py  task_generation.py
backend/src/services/: agent_creator.py  agent_tracking.py  ai_agent.py  blocking_queue.py  blocking_queue_store.py  cache.py  chat_store.py  cleanup_service.py  completion_providers.py  copilot_polling.py  database.py  encryption.py  file_upload.py  github_auth.py  github_commit_workflow.py  github_projects.py  http_client.py  mcp_store.py  metadata_service.py  model_fetcher.py  pipeline_state_store.py  profile_store.py  session_store.py  settings_store.py  signal_bridge.py  signal_chat.py  signal_delivery.py  token_client_cache.py  weather.py  websocket.py  workflow_orchestrator.py
backend/src/services/agents/: agent_mcp_sync.py  service.py
backend/src/services/chores/: chat.py  counter.py  scheduler.py  service.py  template_builder.py
backend/src/services/copilot_polling/: __init__.py  _deps.py  agent_output.py  completion.py  helpers.py  lifecycle.py  pipeline.py  polling_loop.py  pr_detection.py  recovery.py  state.py  state_validation.py  status_checks.py  tracking.py
backend/src/services/github_projects/: __init__.py  _base.py  _copilot_ops.py  _issue_ops.py  _pr_ops.py  _project_ops.py  _queries.py  _status_ops.py  base_client.py  board.py  branches.py  client.py  client_factory.py  copilot.py  copilot_ops.py  fields.py  graphql.py  graphql_queries.py  issues.py  projects.py  pull_requests.py  rate_limit.py  repository.py  service.py
backend/src/services/housekeeping/: __init__.py  counter.py  scheduler.py  seed.py  service.py
backend/src/services/pipelines/: service.py
backend/src/services/tools/: presets.py  service.py
backend/src/services/workflow_orchestrator/: __init__.py  config.py  models.py  orchestrator.py  transitions.py
backend/tests/: conftest.py  test_api_e2e.py  test_weather.py
backend/tests/helpers/: assertions.py  factories.py  mocks.py
backend/tests/integration/: test_blocking_chore_trigger.py  test_blocking_pipeline.py  test_chat_persistence.py  test_custom_agent_assignment.py  test_health_endpoint.py  test_pipeline_lifecycle.py  test_webhook_verification.py
backend/tests/unit/: test_admin_authorization.py  test_agent_creator.py  test_agent_mcp_sync.py  test_agent_output.py  test_agent_tracking.py  test_agents_auth.py  test_agents_service.py  test_ai_agent.py  test_api_agents.py  test_api_auth.py  test_api_board.py  test_api_chat.py  test_api_endpoints.py  test_api_health.py  test_api_pipelines.py  test_api_profile.py  test_api_projects.py  test_api_tasks.py  test_api_tools.py  test_api_video.py  test_api_workflow.py  test_attachment_formatter.py  test_auth_security.py  test_blocking_queue.py  test_blocking_removal.py  test_board.py  test_bug_bash_regressions.py  test_cache.py  test_chat_block.py  test_chores_api.py  test_chores_auth.py  test_chores_scheduler.py  test_chores_service.py  test_cleanup_service.py  test_completion_providers.py  test_config.py  test_config_validation.py  test_copilot_polling.py  test_database.py  test_error_responses.py  (+36 more)
solune/backend/: Dockerfile  README.md  coverage.xml  pyproject.toml
solune/backend/scripts/: detect_flaky.py  run_mutmut_shard.py
solune/backend/src/: config.py  constants.py  dependencies.py  logging_utils.py  main.py  utils.py
solune/backend/src/api/: __init__.py  activity.py  agents.py  apps.py  auth.py  board.py  chat.py  chores.py  cleanup.py  health.py  mcp.py  metadata.py  onboarding.py  pipelines.py  projects.py  roadmap.py  secrets.py  settings.py  signal.py  tools.py  webhook_models.py  webhooks.py  workflow.py
solune/backend/src/middleware/: admin_guard.py  csp.py  csrf.py  rate_limit.py  request_id.py
solune/backend/tests/: conftest.py  test_api_e2e.py
(+3622 files in other folders)
