[project]
name = "agent-projects-backend"
version = "0.1.0"
description = "FastAPI backend for Agent Projects"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.0",
    "uvicorn[standard]>=0.41.0",
    "githubkit>=0.14.6",
    "httpx>=0.28.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.13.0",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0.3",
    # GitHub Copilot SDK (default AI provider)
    "github-copilot-sdk>=0.1.30",
    # Azure OpenAI (optional fallback provider)
    "openai>=2.26.0",
    "azure-ai-inference>=1.0.0b9",
    # SQLite async (durable settings/session storage)
    "aiosqlite>=0.22.0",
    # Encryption for session tokens
    "cryptography>=44.0.0",
    # Signal messaging integration
    "tenacity>=9.1.0",
    "websockets>=16.0",
    # Rate limiting middleware (FastAPI-compatible)
    "slowapi>=0.1.9",
    # Code graph analysis (MCP server + CLI)
    "codegraphcontext>=0.2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
    "pyright>=1.1.408",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "FURB", # refurb (more Pythonic alternatives)
    "PTH",  # pathlib (prefer pathlib over os.path)
    "PERF", # Perflint (performance anti-patterns)
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by ruff format)
    "RUF006", # fire-and-forget asyncio.create_task is intentional
]

[tool.ruff.lint.per-file-ignores]
"tests/unit/test_ai_agent.py" = ["E402"]  # Allow late imports for mocking

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (require external services)",
]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
include = ["src"]
exclude = ["**/__pycache__", "tests"]
reportMissingTypeStubs = false
reportMissingImports = "warning"
