[project]
name = "solune-backend"
version = "0.1.0"
description = "FastAPI backend for Solune"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.0,<1",
    "uvicorn[standard]>=0.41.0,<1",
    "githubkit>=0.14.6,<1",
    "httpx>=0.28.0,<1",
    "pydantic>=2.12.0,<3",
    "pydantic-settings>=2.13.0,<3",
    "python-multipart>=0.0.22,<1",
    "pyyaml>=6.0.3,<7",
    # GitHub Copilot SDK (default AI provider)
    "github-copilot-sdk>=0.1.30,<1",
    # Azure OpenAI (optional fallback provider)
    "openai>=2.26.0,<3",
    "azure-ai-inference>=1.0.0b9,<2",
    # SQLite async (durable settings/session storage)
    "aiosqlite>=0.22.0,<1",
    # Encryption for session tokens
    "cryptography>=46.0.5,<47",
    # Signal messaging integration
    "tenacity>=9.1.0,<10",
    "websockets>=16.0,<17",
    # Rate limiting middleware (FastAPI-compatible)
    "slowapi>=0.1.9,<1",
    # Code graph analysis (MCP server + CLI)
    "codegraphcontext>=0.2.9,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
    "pyright>=1.1.408",
    "hypothesis>=6.131.0",
    "mutmut>=3.2.0",
    "pip-audit>=2.9.0",
    "bandit>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = ["htmlcov"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "FURB", # refurb (more Pythonic alternatives)
    "PTH",  # pathlib (prefer pathlib over os.path)
    "PERF", # Perflint (performance anti-patterns)
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by ruff format)
]

[tool.ruff.lint.per-file-ignores]
"tests/unit/test_ai_agent.py" = ["E402"]  # Allow late imports for mocking

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (require external services)",
]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
include = ["src"]
exclude = ["**/__pycache__", "tests", "htmlcov"]
reportMissingTypeStubs = false
reportMissingImports = "warning"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
fail_under = 69
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]

[tool.bandit]
targets = ["src"]
severity = "medium"
confidence = "medium"
exclude_dirs = ["tests"]

[tool.mutmut]
paths_to_mutate = "src/services/"
tests_dir = "tests/"
